[gd_scene load_steps=4 format=3 uid="uid://bnyfkyjkxwm7h"]

[ext_resource type="Script" path="res://overworld/party_comp/draggable_member.gd" id="1_e0v4q"]
[ext_resource type="Texture2D" uid="uid://61aw7q134xxa" path="res://assets/unit_sprites/front_idle.png" id="1_o2cwy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n2vlf"]
radius = 38.0
height = 110.0

[node name="DraggableMember" type="Node2D"]
script = ExtResource("1_e0v4q")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(5.5625, 5.5625)
texture = ExtResource("1_o2cwy")
hframes = 4

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_n2vlf")

[node name="Label" type="Label" parent="."]
offset_left = -39.0
offset_top = -46.0
offset_right = 39.0
offset_bottom = -23.0
horizontal_alignment = 1

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
